containership/edge/atoms/inv67_kubernetes_integration_mechanism/inv67_kubernetes_integration_mechanism/deploy/base/networkpolicy.yaml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "inv67-controller"
  namespace: "inv67-system"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "inv67"
  policyTypes:
    - "Ingress"
    - "Egress"
  ingress:
    - ports:
        - port: 9090
        - port: 8081
  egress:
    - ports:
        - port: 443
        - port: 6443
    - ports:
        - port: 53
          protocol: "UDP"
